syntax = "proto3";

package auth;

option go_package = "github.com/Zholdaskali/go-microservices/protobuf/api/service/auth";

import "google/protobuf/timestamp.proto";

// 2 - gRPC dto ValidateToken() ----------------
message TokenRequest {
  string token = 1;
}

message TokenResponse {
  bool valid = 1;
  string userId = 2;
}



// 3 - gRPC dto Sign-up() ----------------
message RegisterRequest {
  string userName = 1;
  string email = 2;
  string password = 3;
}

message RegisterResponse {
  string userId = 1;
}



// 4 - gRPC dto Sign-in() ----------------
message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string accessToken = 1;
  string refreshToken = 2;
}

// 5 - grpc dto Refresh-token
message RefreshTokenRequest {
  string refreshToken = 1;
}